[TAP] is T. Alexander Popiel, a former PennMUSH developer (aka Talek)
[3] refers to code by (or inspired by) TinyMUSH 3.0
[MUX] refers to code by (or inspired by) TinyMUX 2.x
[Rhost] refers to code by (or inspired by) RhostMUSH

==========================================================================

Version 1.8.4 patchlevel 9                                 ??? ??, 201?

Minor changes:
 * Added a new event, OBJECT`FLAG, triggered when a flag/power with the
   "event" restriction is set or cleared. Suggested by [SW]. [MG]
 * Expanded help on lock types and @powers. [MG]
 * @startups are now processed in db order (#0, #1, etc) on reboot instead
   of giving priority to player objects. [MG]
 * Switch names that are defined but not used by any commands are
   warned about on startup, and several unused ones have been removed
   from the master list. [SW]
 * Tweak utils/mkcmds.pl for the above change and to remove references
   to generating the obsolete patches.h. [SW]
 
Commands:
 * Added @mail/review for reading mail you've sent, and @mail/retract for
   deleting unread mail that you sent. Idea from MUX. Patch by Minion.

Fixes:
 * lit() didn't properly handle '\'s. Reported by Wiggles. [MG]
 * listq() incorrectly returned all registers (including %0-%9, %i0, etc),
   not just %q-registers. Reported by Wiggles. [MG]
 * The mud_url code didn't always work correctly in Firefox because http
   headers weren't sent. [MG]
 * %0 and %1 arguments weren't properly passed through verb attributes after
   a change in p8. Reported by Padraic. [MG]
 * Fix really stupid copy-and-paste error in magic sorts on strings with
   ANSI, which broke setinter() and friends. Reported by Minion. [MG]
 * Help fixes by Wiggles. [MG]

Version 1.8.4 patchlevel 8                                 Nov 11, 2011

Major changes:
 * ssl_slave is enabled by default by configure if OpenSSL and
  libevent2 are present. Passing --disable-ssl_slave to configure will
  still disable it. [SW]