@@ -13,6 +13,9 @@ be read in 'help patchlevels'.
 
 Version 1.8.4 patchlevel 9                                 ??? ??, 201?
 
+Fixes:
+ * Memory leak in ldelete() fixed. [MG]
+
 Minor changes:
  * Added a new event, OBJECT`FLAG, triggered when a flag/power with the
    "event" restriction is set or cleared. Suggested by [SW]. [MG]
