@@ -33,7 +33,7 @@
 enum itemfun_op { IF_DELETE, IF_REPLACE, IF_INSERT };
 static void do_itemfuns(char *buff, char **bp, char *str, char *num,
                         char *word, char *sep, enum itemfun_op flag);
-
+static void freearr_member(char *p);
 extern const unsigned char *tables;
 
 /** Convert list to array.
@@ -143,8 +143,7 @@ list2arr(char *r[], int max, char *list, char sep, int nullok)
 void
 arr2list(char *r[], int max, char *list, char **lp, const char *sep)
 {
-  int i;
-  int seplen = 0;
+  int i = 0, j = 0, seplen = 0;
 
   if (!max)
     return;
@@ -152,12 +151,22 @@ arr2list(char *r[], int max, char *list, char **lp, const char *sep)
   if (sep && *sep)
     seplen = strlen(sep);
 
-  safe_str(r[0], list, lp);
-  for (i = 1; i < max; i++) {
-    safe_strl(sep, seplen, list, lp);
-    safe_str(r[i], list, lp);
+  for (i = 0; i < max; i++) {
+    if (r[i]) {
+      if (j) {
+        safe_strl(sep, seplen, list, lp);
+      }
+      safe_str(r[i], list, lp);
+      j++;
+    }
   }
   **lp = '\0';
+}
+
+static void
+freearr_member(char *p)
+{
+  mush_free(p, "list2arr_item");
 }
 
 /** Free an array generated by list2arr.
@@ -170,7 +179,8 @@ freearr(char *r[], int size)
 {
   int i;
   for (i = 0; i < size; i++) {
-    mush_free(r[i], "list2arr_item");
+    if (r[i])
+      freearr_member(r[i]);
   }
 }
 
@@ -1737,6 +1747,7 @@ FUNCTION(fun_ldelete)
     r = split_token(&s, ' ');
     cur = atoi(r) - 1;
     if ((cur >= 0) && (cur < nwords)) {
+      freearr_member(ptrs[cur]);
       ptrs[cur] = NULL;
     }
   } while (s);
