@@ -18,6 +18,9 @@ chronological order (most recent first)
 
 Version 1.8.4 patchlevel 9                                 ??? ??, 201?
 
+Fixes:
+ * Memory leak in ldelete() fixed. [MG]
+
 Minor changes:
  * Added a new event, OBJECT`FLAG, triggered when a flag/power with the
    "event" restriction is set or cleared. Suggested by [SW]. [MG]
